Refactor: remove fast.com and add dark mode.
